envoy-http-tls.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: my_listener
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 13333
    filter_chains:
    - filters:
      # The HTTP connection manager is the only network filter.
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: my_cluster
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: my_cluster
    connect_timeout: 0.25s
    type: STATIC
    lb_policy: round_robin
    protocol_selection: USE_DOWNSTREAM_PROTOCOL
    http2_protocol_options: {}
    dns_lookup_family: ALL
    preconnect_policy:
      per_upstream_preconnect_ratio: 2
    transport_socket_matches:
      name: upstream_tls
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            tls_certificates:
              certificate_chain:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIICzTCCAbWgAwIBAgIULit/dBP5a7SpS5PCqptVusN3/ZYwDQYJKoZIhvcNAQEL
[...]
                  4A==
                  -----END CERTIFICATE-----
              private_key:
                inline_string: |
                  -----BEGIN EC PRIVATE KEY-----
                  MHcCAQEEIP6aIW7P533h+B6bAv2Wshmauob8RtkypNgMniXME3PCoAoGCCqGSM49
[...]
                  Wx0IR8UXaU1+ZScP4Y/LwMNTSoGrWK8sxA==
                  -----END EC PRIVATE KEY-----
    load_assignment:
      cluster_name: my_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 33333
